# RefurekuIntegration

./: .gitignore
GeneratorIntegration/: CMakeLists.txt  GeneratorIntegration.sln  GeneratorIntegration.vcxproj
GeneratorIntegration/Source/: main.cpp
LibraryIntegration/: CMakeLists.txt  LibraryIntegration.sln  LibraryIntegration.vcxproj  RefurekuSettings.toml
LibraryIntegration/Include/: Enum1.h
LibraryIntegration/Include/Dir1/: Class1.h
LibraryIntegration/Include/Dir2/: Class2.h  Struct1.h
LibraryIntegration/Source/: main.cpp
